k8s-resources/ingress/ingressresources/ingressresource.yml
# Ingress resource without specific  host
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello-world.ingress
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: web1
          servicePort: 80
